2003-06-04 Seiichi SATO <ssato@sh.rim.or.jp>

	* Added $CPPFLAGS to CFLAGS.

2003-06-04 Seiichi SATO <ssato@sh.rim.or.jp>

	* Fixed a problem with occuring an incorrect size hint when changing
	  scrollbar. (change the order of x_window_resize() and
	  x_window_set_normal_hints() in x_scrollbar_change_view().)

2003-06-03 Tomohiro KUBOTA <kubota@debian.org>

	* Update man/mlterm.1 (The default of --sb is "true".)

2003-06-03 Araki Ken <arakiken@users.sf.net>

	* Renamed 'ut.name' to 'ut.user' in kik_utmp_sysv.c.
	* Fixed typo in kik_dlfcn.c.
	  (Thanks to Sakamoto Hironori san)

2003-06-03 Araki Ken <arakiken@users.sf.net>

	* Added doc/ja/README.pty
	* Updated doc/ja/README.ja
	* Ctrl+[F2-F4] are assigned to OPEN_PTY,NEXT_PTY,PREV_PTY shortcut by default.
	* If --sb=false is specified, ignored --title and --icon options. Fixed.

2003-06-03  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_imagelib_gdk.c: 
	 - support MSBFirst screen
	 - fixed bugs in PseudoColor visual

2003-06-02  MINAMI Hirokazu  <minami@mistfall.net>

	* Removed obsoleted config tools(mlcc/mlconf_curses)
	* xwindow/x_dnd.c: code cleanup
	* xwindow/x_imagelib_imlib.c: added mask support
	* xwindow/x_imagelib_gdk.c: plugged leak
	
2003-05-25 Tomohiro KUBOTA <kubota@debian.org>

	* Japanese translation for a new item in tool/mlconfig/po .
	* Current automatic (locale-sensible) encoding is now shown
	  like "ISO-8859-15" instead of "ISO885915" on mlconfig.

2003-05-25 Seiichi SATO <ssato@sh.rim.or.jp>

	* Added a search path to kiklib/src/.libs/libkik.* for -lkik to
	  mkf/lib/Makefile.in.
	  (Thanks to Kubota Tomohiro san and Minami Hirokazu san)

2003-05-25 Araki Ken <arakiken@users.sf.net>

	* The free'd 'root' could be accessed at close_screen_intern() in x_term_manager.c. Fixed.
	  (Thanks to Minami Hirokazu san)
	* As soon as the child 'make' process exits, the parent one also exits.
	  (Thanks to Minami Hirokazu san)
	* Added 'is_auto_encoding' to doc/en/PROTOCOL.